--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,12 @@
         "dmstr/yii2-adminlte-asset": "^2.1",
         "yiisoft/yii2-jui": "^2.0",
         "kartik-v/yii2-widget-fileinput": "dev-master",
-        "kartik-v/yii2-widget-select2": "@dev"
+        "kartik-v/yii2-widget-select2": "@dev",
+        "yiisoft/yii2-faker": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
         "yiisoft/yii2-gii": "~2.1.0",
-        "yiisoft/yii2-faker": "~2.0.0",
 
         "codeception/base": "~2.3.0",
         "codeception/verify": "~0.4.0",
